<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Flacc">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/txt_titulo_principal_flacc"
                android:textStyle="bold"
                android:padding="10sp"
                android:textSize="24dp"
                android:gravity="center"
                android:background="#7CB342"
                android:textColor="@color/black"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/txt_titulo_flacc"
                android:textStyle="bold"
                android:padding="10sp"
                android:textSize="18dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="5sp"
                android:id="@+id/txt_cara"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="#94C85E"
                android:gravity="center"
                android:onClick="MostarLista"
                android:text="@string/txt_valor1"
                android:padding="10sp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableEndCompat="@android:drawable/ic_menu_more" />

            <RadioGroup
                android:id="@+id/rg_cara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_flacc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor1"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_flacc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor2"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_flacc3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor3"
                    android:textStyle="bold" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1sp"
                android:background="#94C85E"
                android:gravity="center"
                android:padding="10sp"
                android:onClick="MostarListaPiernas"
                android:text="@string/txt_valor2"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableEndCompat="@android:drawable/ic_menu_more" />

            <RadioGroup
                android:id="@+id/rg_piernas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RadioButton
                    android:id="@+id/rb_flacc4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor4"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_flacc5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor5"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_flacc6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor6"
                    android:textStyle="bold" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="1sp"
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#94C85E"
                android:gravity="center"
                android:padding="10sp"
                android:onClick="MostarListaActividad"
                android:text="@string/txt_valor3"
                android:textColor="@color/black"
                app:drawableEndCompat="@android:drawable/ic_menu_more"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <RadioGroup
                android:id="@+id/rg_actividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_flacc7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor7"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_flacc8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor8"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_flacc9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor9"
                    android:textStyle="bold" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="1sp"
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#94C85E"
                android:gravity="center"
                android:padding="10sp"
                android:onClick="MostarListallanto"
                android:text="@string/txt_valor4"
                android:textColor="@color/black"
                app:drawableEndCompat="@android:drawable/ic_menu_more"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <RadioGroup
                android:id="@+id/rg_llanto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_flacc10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor10"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_flacc11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor11"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_flacc12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor12"
                    android:textStyle="bold" />
            </RadioGroup>

            <TextView
                android:layout_marginTop="1sp"
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#94C85E"
                android:gravity="center"
                android:padding="10sp"
                android:onClick="MostarListaConsuelo"
                android:text="@string/txt_valor5"
                android:textColor="@color/black"
                app:drawableEndCompat="@android:drawable/ic_menu_more"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <RadioGroup
                android:id="@+id/rg_consuelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RadioButton
                    android:id="@+id/rb_flacc13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor13"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_flacc14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor14"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_flacc15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_valor15"
                    android:textStyle="bold" />

            </RadioGroup>

            <TextView
                android:id="@+id/id_ResultadoFlacc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:padding="10sp"
                android:background="#94C85E"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
